# soupsieve

./: .coveragerc  .gitignore  .pyspelling.yml  .travis.yml  404.html  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  hatch_build.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini  zensical.yml
.github/: labeler.yml  labels.json  labels.yml
.github/workflows/: branches.yml  build.yml  deploy.yml  labels.yml  newpull.yml  publish.yaml  pullrequest.yml  triage.yml
_snippets/: links.txt  selector_styles.txt
about/changelog/: index.html
about/contributing/: index.html
about/development/: index.html
about/license/: index.html
about/security/: index.html
api/: index.html
differences/: index.html
docs/src/dictionary/: en-custom.txt
docs/src/markdown/: api.md  differences.md  faq.md  index.md  selectors.md
docs/src/markdown/.snippets/: links.md  selector_styles.md
docs/src/markdown/_snippets/: links.txt  selector_styles.txt
docs/src/markdown/about/: changelog.md  contributing.md  development.md  license.md
docs/src/markdown/selectors/: basic.md  combinators.md  index.md  pseudo-classes.md  unsupported.md
faq/: index.html
requirements/: docs.txt  project.txt  tests-nohtml5lib.txt  tests-nolxml.txt  tests.txt
search/: search_index.json
selectors/: index.html
selectors/basic/: index.html
selectors/combinators/: index.html
selectors/pseudo-classes/: index.html
selectors/unsupported/: index.html
soupsieve/: __init__.py  __meta__.py  css_match.py  css_parser.py  css_types.py  pretty.py  util.py
soupsieve/css_lang/: __init__.py  registry.py
tests/: test_api.py  test_bs4_cases.py  test_custom.py  test_extra.py  test_invalid.py  test_lang_canonicalization.py  test_level1.py  test_level2.py  test_level3.py  test_level4.py  test_quirks.py  test_soupsieve.py  test_versions.py  util.py
tests/test_extra/: test_aliases.py  test_attribute.py  test_contains.py  test_custom.py  test_regex.py  test_soup_contains.py  test_soup_contains_own.py
tests/test_level1/: test_class.py  test_id.py  test_link.py  test_list.py  test_pseudo_class.py  test_type.py
tests/test_level2/: test_attribute.py  test_child.py  test_lang.py
tests/test_level3/: test_attribute.py  test_disabled.py  test_namespace.py  test_not.py  test_nth_child.py  test_root.py
tests/test_level4/: test_attribute.py  test_default.py  test_defined.py  test_dir.py  test_has.py  test_in_range.py  test_indeterminate.py  test_is.py  test_lang.py  test_nth_child.py  test_nth_last_child.py  test_open.py  test_out_of_range.py  test_placeholder_shown.py  test_scope.py
tools/: gen_iana_registry.py  gh_labels.py  labels.json
